GUI-1478: Fix alignment of Euca/AWS login page forms

--- a/eucaconsole/static/css/pages/login.css
+++ b/eucaconsole/static/css/pages/login.css
@@ -11,10 +11,11 @@
 #ssl-warning p { line-height: 1.2rem; margin-top: 0.25rem; }
 
 #login-wrapper { position: relative; padding: 10px; }
-#login-wrapper label { font-weight: bold; color: #444; white-space: nowrap; vertical-align: middle; position: relative; top: 0px; left: 0px; bottom: 10px; }
+#login-wrapper label { font-weight: bold; color: #444; white-space: nowrap; vertical-align: middle; position: relative; top: 0; left: 0; bottom: 10px; }
 #login-wrapper input { background-color: #e6e7e8; height: 2.25rem; }
 #login-wrapper .hide-aws { max-width: 480px; margin: 0 auto; }
-#login-wrapper .tabs-content { padding: 1rem; padding-bottom: 2rem; background-color: white; box-shadow: 3px 3px 5px 0px #ccc; }
+#login-wrapper .tabs-content { padding: 1rem; padding-bottom: 2rem; background-color: white; box-shadow: 3px 3px 5px 0 #ccc; }
+#login-wrapper .tabs-content .content { width: 85%; margin: 0 auto; }
 #login-wrapper .button { display: block; width: 100%; margin-top: 12px; margin-bottom: 12px; background-color: #f3901d; }
 #login-wrapper #euca-tab.active, #login-wrapper #aws-tab.active { background-color: white; }
 
